@@ -2,6 +2,9 @@
 
 	* src/SDCCpeeph.c:
 	  Improve error message on missing skip instruction target label at end of inline asm in __naked function. Fix bug #3566.
+	* src/SDCCast.c,
+	  support/regression/tests/bug-3570.c:
+	  Fix bug #3570.
 
 2023-03-21 Felix Salfelder <felix AT salfelder.org>
 
